# Fogo

./: .gitignore  Dockerfile  README.md  dockerfile  pyproject.toml  structure.txt
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt  setup.sh
.github/workflows/: tests.yml
notebooks/: online_gbdt_demo.html  online_gbdt_demo.ipynb
src/fogo/: __init__.py  decision_tree.py  online_gbdt.py
src/fogo.egg-info/: PKG-INFO  SOURCES.txt
tests/: runner.py  test_batch_fit.py  test_decision_tree.py  test_increment.py  test_incremental_add.py  test_incremental_delete.py  test_online_gbdt.py
