[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]  # Add this line to include the src directory in the Python path

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"