[project]
name = "fogo"
version = "0.1.0"
description = "Online Gradient Boosted Decision Trees"
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = []

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]