[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fogo"
version = "0.1.0"
description = "Fogo: Online Gradient Boosted Decision Trees for Edge Learning and Machine Unlearning"
readme = "README.md"
license = {text = "MIT"}

authors = [
  { name = "Kennon Stewart", email = "kennon@secondstreetlabs.io" }
]

maintainers = [
  { name = "Second Street Labs", email = "hi@secondstreetlabs.io" }
]

requires-python = ">=3.8"

dependencies = [
  "pytest>=7.0",
  "numpy>=1.21",
  "scipy>=1.7",
  "matplotlib>=3.4",
  "scikit-learn>=1.0",
  "pandas>=1.3",
  "seaborn>=0.11",
  "scikit-image>=0.19"
]

keywords = [
  "online learning",
  "gradient boosting",
  "machine unlearning",
  "edge AI",
  "incremental learning",
  "streaming data",
  "fogo"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

# Optional URLs
urls = {
  "Homepage" = "https://secondstreetlabs.io/fogo",
  "Documentation" = "https://secondstreetlabs.io/fogo/docs",
  "Repository" = "https://github.com/secondstreetlabs/fogo",
  "Issues" = "https://github.com/secondstreetlabs/fogo/issues"
}

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
